Tweak new random number infrastructure.
Move from inheiritance w/virtual functions to templated containment, based on performance test.

Put RandomBase and MarsagliaRandom into the INCLUDE_FILES listing

Change seed_used to seedUsed()

--- a/include/Lintel/CMakeLists.txt
+++ b/include/Lintel/CMakeLists.txt
@@ -29,10 +29,12 @@ SET(INCLUDE_FILES
 	LockOrderingGroup.hpp
 	MathSpecialFunctions.hpp
 	Matrix.hpp
+        MarsagliaRandom.hpp
 	MersenneTwisterRandom.hpp
 	PointerUtil.hpp
 	Posix.hpp
 	PriorityQueue.hpp
+        RandomBase.hpp
 	RotatingHashMap.hpp
 	SimpleMutex.hpp
 	STLUtility.hpp
