Enabled installation of the InterpolationSearch code; probably ought be experimental though.

--- a/include/Lintel/CMakeLists.txt
+++ b/include/Lintel/CMakeLists.txt
@@ -23,6 +23,7 @@ SET(INCLUDE_FILES
 	HashTable.hpp
 	HashTupleStats.hpp
 	HashUnique.hpp
+        InterpolationSearch.hpp
 	LeastSquares.hpp
 	LintelLog.hpp
 	LintelVersion.hpp
