Added support for new compressions algorithms, snappy, lz4, and lz4hc.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,6 +24,7 @@ SET(LINTEL_VERSION 0.0)
 SET(LINTEL_ABI_VERSION 0)
 SET(LINTELPTHREAD_ABI_VERSION 0)
 
+# Tells CMake where to look when using FIND_PACKAGE() or INCLUDE()
 SET(CMAKE_MODULE_PATH "${Lintel_SOURCE_DIR}/cmake-modules" ${CMAKE_MODULE_PATH})
 
 INCLUDE("CMakeConfig.txt")
