Added FindLZ4.cmake and FindSnappy.cmake to CMakeLists

--- a/cmake-modules/CMakeLists.txt
+++ b/cmake-modules/CMakeLists.txt
@@ -3,6 +3,8 @@ SET(CMAKE_MODULE_FILES
 	FindLibXmlpp.cmake
 	FindLintel.cmake
 	FindLZO.cmake
+        FindLZ4.cmake
+        FindSnappy.cmake
 	LintelCMakeUtil.cmake
 	LintelDocs.cmake
 	LintelFind.cmake
