Fix perl compilation issue with 5.18 + C++.  Fix compiler warning in Deque.hpp.
perl 5.18 with c++ compiler doesn't define Perl___notused in dNOOP, it
defines it as (void)0.  This makes the later macro expansion of
PERL_UNUSED_VAR(Perl___notused) fail because the variable is undefined.
Since we're already getting lots of unused parameter warnings, just
suppress this entirely by changing the macro definition.

--- a/src/perl/CMakeLists.txt
+++ b/src/perl/CMakeLists.txt
@@ -26,12 +26,12 @@ IF(NOT PERL_COREINCDIR)
     ENDIF(EXISTS "${PERL_TMP}/CORE/perl.h")
 ENDIF(NOT PERL_COREINCDIR)
 
-IF(PERL_XSUBPPDIR AND PERL_COREINCDIR)
+IF(WITH_PERL_BINARY_MODULES AND PERL_XSUBPPDIR AND PERL_COREINCDIR)
     SET(PERL_BINARY_MODULES_ENABLED YES)
-ELSE(PERL_XSUBPPDIR AND PERL_COREINCDIR)
+ELSE(WITH_PERL_BINARY_MODULES AND PERL_XSUBPPDIR AND PERL_COREINCDIR)
     SET(PERL_BINARY_MODULES_ENABLED NO)
     LIST(APPEND LINTEL_FIND_ALL_NOTFOUND perl-binary-modules)
-ENDIF(PERL_XSUBPPDIR AND PERL_COREINCDIR)
+ENDIF(WITH_PERL_BINARY_MODULES AND PERL_XSUBPPDIR AND PERL_COREINCDIR)
 
 IF(PERL_BINARY_MODULES_ENABLED)
     ADD_CUSTOM_COMMAND(OUTPUT ${CMAKE_CURRENT_BINARY_DIR}/LintelPerl.cpp
